--- a/Flashcards/en.lproj/MainStoryboard.storyboard
+++ b/Flashcards/en.lproj/MainStoryboard.storyboard
@@ -108,7 +108,7 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TFu-4b-woC" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="jkK-I7-P71" customClass="FlashCardDisplayViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4qb-tC-cgH">
+                    <view key="view" contentMode="scaleToFill" id="4qb-tC-cgH" userLabel="LazyMode">
                         <rect key="frame" x="0.0" y="64" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -157,18 +157,34 @@
                                     <action selector="Previous:" destination="jkK-I7-P71" eventType="touchUpInside" id="y5N-v9-PNO"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Zg7-RY-ekE">
+                                <rect key="frame" x="637" y="886" width="102" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Lazy Mode">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="lazyModePressed:" destination="jkK-I7-P71" eventType="touchUpInside" id="D6Z-Qs-iYD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="w9Y-bo-tEn"/>
                     <connections>
                         <outlet property="flashCardView" destination="nVH-3g-UMy" id="Yl0-59-3p7"/>
+                        <outlet property="lazyModeButton" destination="Zg7-RY-ekE" id="0Kj-8D-9yW"/>
                         <outlet property="nextButton" destination="64K-9M-IDS" id="kJD-Xd-nCo"/>
                         <outlet property="previousButton" destination="ONZ-gd-RGx" id="fLV-Ig-iM0"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="103" y="-366"/>
+            <point key="canvasLocation" x="135" y="-350"/>
         </scene>
         <scene sceneID="KGC-4d-33I">
             <objects>
@@ -185,26 +201,6 @@
             <point key="canvasLocation" x="-1804" y="-1526"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="FlashCardDisplayViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FlashCardDisplayViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="Next:"/>
-                <relationship kind="action" name="Previous:"/>
-                <relationship kind="action" name="flipButtonPressed:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="flashCardView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="nextButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="previousButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bottomView" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="topView" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
